# league-tracker

./: .gitmodules  CMakeLists.txt  a.out  config.h.in  main.cpp  scrape.cpp  test.cpp
assets/: challenges.json
assets/json_files/: challenges.json
assets/json_files/champions/: 1.json
